--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <div class="box">
                 <img src="./img/logo_html.png">
                 <h3>HTML5 Markup</h3>
-                <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus mi augue, viverra sit amet ultrici</p>
+                <p> XYZ id a web development service provider Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus mi augue, viverra sit amet ultrici</p>
             </div>
             <div class="box">
                 <img src="./img/logo_css.png">
