--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <section id="showcase">
         <div class="container">
             <h1>Web Design Services</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eu luctus ipsum, rhoncus semper magna. Nulla nec magna sit amet sem interdum condimentum.</p>
+            <p> XYZ id a web development service provider Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eu luctus ipsum, rhoncus semper magna. Nulla nec magna sit amet sem interdum condimentum.</p>
         </div>
     </section>   
     
@@ -47,7 +47,7 @@
             <div class="box">
                 <img src="./img/logo_html.png">
                 <h3>HTML5 Markup</h3>
-                <p> XYZ id a web development service provider Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus mi augue, viverra sit amet ultrici</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus mi augue, viverra sit amet ultrici</p>
             </div>
             <div class="box">
                 <img src="./img/logo_css.png">
