--- a/about.html
+++ b/about.html
@@ -40,12 +40,14 @@
         <div class="container">
             <article id="main-col">
                 <h1>About Us</h1>
-                <p> consectetur adipiscing elit. Etiam eu luctus ipsum, rhoncus semper magna. Nulla nec magna sit amet sem interdum condimentum  ipsum dolor sit amet, consectetur adipiscing elit. Etiam eu luctus ipsum, rhoncus semper magna. Nulla nec magna sit amet sem interdum condimentum.</p>
+                <p> Our website developers provide expert web application development and web design services to our clients. XYZ offers a variety of website design and development services, from creating mobile web development solutions and responsive website designs, to building custom e-commerce and intranet experiences using the latest and proven web technologies. With up to 85% of consumers visiting company’s or service provider’s website before making a purchase, more and more consumers make decisions based on their online experience: the appearance, usability and accessibility of your website is more important than ever, especially in an increasingly competitive market.</p>
             </article>
             <aside id="sidebar">
                 <div class="dark">
-                    <h1>What We Do</h1>
-                    <p>Lorclasem ipsum dolor  sit s ipsum, ipsum dolor sit amet, consectetur adipiscing elit. Etiam eu luctus ipsum, rhoncus semper magna. Nulla nec magna sit amet sem interdum condimentum rhoncus semper magna. Nulla nec magna sit amet sem interdum condimentum.</p>
+                    <h1>Contact us</h1>
+                    <p>Ph - 05262-240102<br>Email - webservices@xyz.com
+
+                    </p>
                 </div>
             </aside>
         </div>
