--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 
     <section id="showcase">
         <div class="container">
-            <h1>Web Design Services</h1>
-            <p> XYZ id a web development service provider Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eu luctus ipsum, rhoncus semper magna. Nulla nec magna sit amet sem interdum condimentum.</p>
+            <h1>Web Services</h1>
+            <p> XYZ specializes in website design and development services. Our web experiences are high-performing, feature-packed and digitally transformative, designed to be user-friendly, fully functional, very secure and able to scale as your enterprise grows.  </p>
         </div>
     </section>   
     
@@ -47,17 +47,17 @@
             <div class="box">
                 <img src="./img/logo_html.png">
                 <h3>HTML5 Markup</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus mi augue, viverra sit amet ultrici</p>
+                <p>Providing the best, most innovative HTML5 development and consulting services on the market, XYZ has extensive experience with creating high performing, feature-packed HTML5-based web and mobile experiences.</p>
             </div>
             <div class="box">
                 <img src="./img/logo_css.png">
                 <h3>CSS3 Markup</h3>
-                <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus mi augue, viverra sit amet ultrici</p>
+                <p> CSS plays an important role in web design. Style sheet is a reference to the document itself but it is the term cascading that gives CSS its unique quality. much like the cascading or ripple effect of a waterfall. It allows you to develop the overall look of your website</p>
             </div>
             <div class="box">
                 <img src="./img/logo_brush.png">
                 <h3>Graphic Design</h3>
-                <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus mi augue, viverra sit amet ultrici</p>
+                <p> Graphic design is a craft where professionals create visual content to communicate messages. By applying visual hierarchy and page layout techniques, designers use typography and pictures to meet users' specific needs and focus on the logic of displaying elements in interactive designs, to optimize the user experience.</p>
             </div>
         </div>
     </section>
